# alphafill

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  af-ligands.cif  alphafill-update.make  alphafill.conf-dist.in  changelog  db-schema.sql  package.json  webpack.config.js
.github/workflows/: cmake-multi-platform.yml
cmake/: VersionString.cmake
docroot/: about.html  alphafill.json.schema  compounds.html  download.html  error.html  footer.html  head.html  header.html  index.html  license.html  missing.html  model.html  optimized.html  structures.html  wait.html
docs/: CMakeLists.txt  conf.py.in  help.rst  index.rst  manual.rst  requirements.in  requirements.txt
docs/man/: alphafill-api.rst  alphafill-create-index.rst  alphafill-process.rst  alphafill-rebuild-db.rst  alphafill-server.rst  alphafill.conf.rst  alphafill.conf.rst.in  alphafill.rst  index.rst
docs/pdb-redo/: layout.html  theme.conf
rsrc/: mmcif_af.dic
scripts/: refine.mcr
scss/: af-style.scss  pdb-redo-bootstrap.scss
src/: af-filledd.cpp  align-3d.cpp  align-3d.hpp  alphafill.cpp  alphafill.hpp  blast.cpp  blast.hpp  bsd-closefrom.c  bsd-closefrom.h  clash-score.cpp  config.hpp.in  data-service.cpp  data-service.hpp  db-connection.cpp  db-connection.hpp  https-client.cpp  https-client.hpp  ligands.cpp  ligands.hpp  main.cpp  main.hpp  matrix.cpp  matrix.hpp  merge-af.cpp  queue.hpp  server.cpp  server.hpp  structure.cpp  structure.hpp  utilities.cpp  utilities.hpp  validate-fill.cpp  validate.cpp  validate.hpp
test/: alphafill-test.conf.in  validate-test-files.cpp
test-yasara/: errorexit.sce  errorexit.txt  input.cif  input2.cif  output.cif
test/afdb-v4/P2/: AF-P29373-F1-predicted_aligned_error_v4.json
validate/: combine.pl  validate-all.sh  validation-report.make
webapp/: index.js  lists.js  model.js  molstar.tsx  optimized.js  wait.js
